# sammis-factory-a-

./: .aider.conf.yml  .gitignore  BUILD_ORDER.md  CONTEXT.md  FACTORY_A_NAVIGATION.md  FACTORY_S_DESIGN_BLUEPRINT.docx  FACTORY_S_FINAL_PLAN.docx  FACTORY_S_FINAL_PLAN_V3.docx  FACTORY_S_WORKERS_S1_S7.docx  FILE_INDEX.md  MANIFEST.md  PROJECT_BIBLE.md  PROJECT_MAP.md  README.md  README.vi.md  S7_SELFEVALUATOR_SPEC.docx  SYSTEM_STATUS.md  TODO.md  autostart_task.xml  fix_bot_strings.py  patch_db.py  protected_checksums  pyproject.toml  requirements.txt  restart_ceo_bot.bat  run_ceo_bot.bat  start_ceo_bot.bat  stop_ceo_bot.bat
